--- a/posts/CSharp/地雷.md
+++ b/posts/CSharp/地雷.md
@@ -21,3 +21,63 @@ DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss:fff");
 ```csharp
 DateTime.Now.ToString("yyyy-MM-dd HH:mm:ss:FFF")
 ```
+
+## Double
+如果要從0.1遞增列出到2，不要用double，迴圈大概只要跑20次就會出問題
+```c sharp
+for (double i = 0.1; i <= 2; i += 0.1)
+    Console.WriteLine(i);
+```
+```command
+0.1
+0.2
+0.3
+0.4
+0.5
+0.6
+0.7
+0.8
+0.9
+1
+1.1
+1.2
+1.3
+1.4
+1.5
+1.6
+1.7
+1.8
+1.9
+```
+```c sharp
+for (decimal i = 0.1m; i <= 2; i += 0.1m)
+    Console.WriteLine(i);
+```
+```
+0.1
+0.2
+0.3
+0.4
+0.5
+0.6
+0.7
+0.8
+0.9
+1.0
+1.1
+1.2
+1.3
+1.4
+1.5
+1.6
+1.7
+1.8
+1.9
+2.0
+```
+
+因為在二進位中紀錄double
+```
+0.1 = 0.00011001100110011001100110011001100110011001100110011...
+```
+所以0.1+0.1加起來會發生微小誤差，多加幾次誤差就會變大，double在迴圈中跑20次的時候，19次時就已經超過2了，導致迴圈會少跑一次，而decimal是使用十進位去計算，就可以避免這個問題發生
